// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateKeyPair should generate EC KeyPair 1`] = `
{
  "algorithms": [
    "ES512",
  ],
  "allowed": 2021-01-01T08:00:00.000Z,
  "created": 2021-01-01T08:00:00.000Z,
  "expires": null,
  "external": false,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "namedCurve": "P-521",
  "operations": [
    "sign",
    "verify",
  ],
  "origin": null,
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "PRIVATE_KEY",
  "publicKey": "PUBLIC_KEY",
  "revision": 0,
  "type": "EC",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`generateKeyPair should generate EC KeyPair with namedCurve 1`] = `
{
  "algorithms": [
    "ES384",
  ],
  "allowed": 2021-01-01T08:00:00.000Z,
  "created": 2021-01-01T08:00:00.000Z,
  "expires": null,
  "external": false,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "namedCurve": "P-384",
  "operations": [
    "sign",
    "verify",
  ],
  "origin": null,
  "passphrase": null,
  "preferredAlgorithm": "ES384",
  "privateKey": "PRIVATE_KEY",
  "publicKey": "PUBLIC_KEY",
  "revision": 0,
  "type": "EC",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`generateKeyPair should generate KeyPair 1`] = `
{
  "algorithms": [
    "ES512",
  ],
  "allowed": 2021-01-01T08:00:00.000Z,
  "created": 2021-01-01T08:00:00.000Z,
  "expires": null,
  "external": false,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "namedCurve": "P-521",
  "operations": [
    "sign",
    "verify",
  ],
  "origin": null,
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "PRIVATE_KEY",
  "publicKey": "PUBLIC_KEY",
  "revision": 0,
  "type": "EC",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`generateKeyPair should generate RSA KeyPair 1`] = `
{
  "algorithms": [
    "RS256",
    "RS384",
    "RS512",
  ],
  "allowed": 2021-01-01T08:00:00.000Z,
  "created": 2021-01-01T08:00:00.000Z,
  "expires": null,
  "external": false,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "namedCurve": null,
  "operations": [
    "decrypt",
    "encrypt",
    "sign",
    "verify",
  ],
  "origin": null,
  "passphrase": null,
  "preferredAlgorithm": "RS512",
  "privateKey": "PRIVATE_KEY",
  "publicKey": "PUBLIC_KEY",
  "revision": 0,
  "type": "RSA",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`generateKeyPair should generate RSA KeyPair with passphrase 1`] = `
{
  "algorithms": [
    "RS256",
    "RS384",
    "RS512",
  ],
  "allowed": 2021-01-01T08:00:00.000Z,
  "created": 2021-01-01T08:00:00.000Z,
  "expires": null,
  "external": false,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "namedCurve": null,
  "operations": [
    "decrypt",
    "encrypt",
    "sign",
    "verify",
  ],
  "origin": null,
  "passphrase": "pass",
  "preferredAlgorithm": "RS512",
  "privateKey": "PRIVATE_KEY",
  "publicKey": "PUBLIC_KEY",
  "revision": 0,
  "type": "RSA",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;
